# signatures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
core/: app.cpp  app.h  depot.cpp  depot.h  gamebuild.cpp  gamebuild.h
utils/: pe.cpp  pe.h  sigmaker.cpp  sigmaker.h
vendors/: CMakeLists.txt
